--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -9,10 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Markdown autodocs
-    - uses: dineshsonachalam/markdown-autodocs@v1.0.4
-      with:
-        commit_author: Luois45 <github@louis45.de>
-        commit_user_email: github@louis45.de
-        commit_message: Updated Credits in README
-        categories: '[code-block,json-to-html-table,workflow-artifact-table]'
+      - uses: actions/checkout@v2
+      - name: Markdown autodocs
+        uses: dineshsonachalam/markdown-autodocs@v1.0.4
+        with:
+          commit_author: Luois45 <github@louis45.de>
+          commit_user_email: github@louis45.de
+          commit_message: Updated Credits in README
+          categories: '[code-block,json-to-html-table,workflow-artifact-table]'
