--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 jobs:
-  build:
+  auto-update-readme:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
