--- a/.github/workflows/update-blocklist.yml
+++ b/.github/workflows/update-blocklist.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install requests
     - name: Generate new blocklist
       run: |
         python fetch-lists.py
