--- a/.github/workflows/update-blocklist.yml
+++ b/.github/workflows/update-blocklist.yml
@@ -20,9 +20,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
-    - name: Generate new blocklist
+    - name: Generate new blocklists
       run: |
         python fetch-lists.py
+    - name: Convert new blocklists
+      run: |
+        python convert-lists.py
     - name: commit files and push changes
       run: |
         git config --local user.email "action@github.com"
