--- a/.github/workflows/update-blocklist.yml
+++ b/.github/workflows/update-blocklist.yml
@@ -6,7 +6,7 @@ on:
         branches: [main]
     workflow_dispatch:
     schedule:
-        - cron: "0 * * * *"
+        - cron: "*/5 * * * *"
 jobs:
     build:
         runs-on: ubuntu-latest
