--- a/.github/workflows/update-blocklist.yml
+++ b/.github/workflows/update-blocklist.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install requests joblib
+                  pip install -r requirements.txt
             - name: Generate new blocklists
               run: |
                   python generate.py
